fixed the z-index of the 2 modals

--- a/client/src/components/inventory/inventoryModal.scss
+++ b/client/src/components/inventory/inventoryModal.scss
@@ -12,6 +12,7 @@
 }
 
 .modal-wrapper-show {
+   z-index: 10;
    position: fixed;
    top: 0;
    left: 0;
